<resources>
    <string name="app_name">food_recipe_app</string>
    <string name="next">next</string>
    <string name="textview">TextView</string>
    <string name="filter_recipe">Filter recipe</string>
    <string name="meal_type">Meal Type</string>
    <string name="main_course">Main Course</string>
    <string name="side_dish">Side Dish</string>
    <string name="dessert">Dessert</string>
    <string name="diet_type">Diet Type</string>
    <string name="apply">Apply</string>
    <string name="chicken">Chicken</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="gluten_free">Gluten Free</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recipe_fragment">Recipes</string>
    <string name="favorites_fragment">Favorites</string>
    <string name="recipe_overview_fragment">recipe_overview_fragment</string>
    <string name="recipe_instructions_fragment" />
    <string name="overview">Overview</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>
</resources>